--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,25 @@ body {
 h1 {
     text-align: center;
     font-size: 40px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+img {
+    width: 320px;
+    height: 200px;
+}
+
+#background {
+    background: white;
 }
 
 .questions {
     font-size: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#time {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #directions-text {
@@ -18,4 +33,34 @@ h1 {
 
 .answers {
     font-size: 30px;
+}
+
+#playAgain {
+    font-size: 40px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+}
+
+#correct-text {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+    text-align: center;
+}
+
+#wrong-text {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+    text-align: center;
+}
+
+#reset {
+    text-align: center;
+}
+
+#disneyPic1 {
+    width: 900px;
+    height: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
